# STRIDE

./: LICENSE  README.md  index.html  pyproject.toml
configs/: deepspeed_zero2.json
eval/model/: __init__.py  base.py  qwen3_stride.py
eval/task/: utils.py  videoloader.py
eval/task/etbench/: bench.py  compute_metrics.py  score.py
scripts/: download_videos.py  etbench.sh  prepare_activation_dataset.py  train.sh
static/css/: index.css
stride/model/: __init__.py  gemma3.py  internvl.py  qwen3vl.py
stride/train/: arguments.py  run.py  trainer.py
stride/utils/: __init__.py  data_processing.py  input_processing.py  train_utils.py
